tests/ui/type-alias-impl-trait/different_defining_uses_never_type-2.stderr
error: concrete type differs from previous defining opaque type use
  --> $DIR/different_defining_uses_never_type-2.rs:9:31
   |
LL |             let y: Tait<'b> = 1i32;
   |                               ^^^^ expected `()`, got `i32`
   |
note: previous use here
  --> $DIR/different_defining_uses_never_type-2.rs:14:5
   |
LL |     x
   |     ^

error: aborting due to 1 previous error

